# graci

./: README.md  citation.cff  graci.yml  index.md
graci/dep/bitci/: CMakeLists.txt  install_bitci
graci/dep/bitci/doc/: implementation.tex  references.bib  symmetry.tex
graci/dep/bitci/doc/doxygen/: configfile
graci/dep/bitci/pgo_gen/: butadiene.inp
graci/dep/bitci/src/ci/conf_mrci/: confbuilder.f90  holeconfs.f90  mrciconf.f90
graci/dep/bitci/src/ci/conf_ref/: ref_prop.f90  ref_prune.f90  ref_refine.f90  refconf.f90
graci/dep/bitci/src/ci/density/: 1rdm_mrci.f90
graci/dep/bitci/src/ci/dets/: casdets.f90  mrcidets.f90  rasdets.f90
graci/dep/bitci/src/ci/detwf/: mrci_wf.f90  truncate_dets.f90
graci/dep/bitci/src/ci/dftcis/: dftcis.f90  dftcis_conf.f90  dftcis_guess.f90  dftcis_hbuild.f90  dftcis_param.f90
graci/dep/bitci/src/ci/dftmrci/: custom_hparam.f90  dftmrci.f90
graci/dep/bitci/src/ci/diabatic/: diabpot.f90  gvvpt2_diab.f90  heff_diabatic.f90  model_states.f90  protodiab.f90
graci/dep/bitci/src/ci/diag_det/: fulldiag.f90
graci/dep/bitci/src/ci/diag_mrci/: mrci_diag.f90  mrci_guess.f90
graci/dep/bitci/src/ci/diag_ref/: ref_diag_follow.f90  ref_diag_sci.f90  ref_guess.f90
graci/dep/bitci/src/ci/eigensolvers/: blockdav.f90  full_diag.f90  gendav.f90
graci/dep/bitci/src/ci/finalise/: finaliseci.f90
graci/dep/bitci/src/ci/hbuild/: hbuild_double.f90  hbuild_mrci.f90  hij_disk.f90  sigma.f90
graci/dep/bitci/src/ci/init/: baseconf.f90  initci.f90  precompute_integrals.f90
graci/dep/bitci/src/ci/output_mrci/: output_common.f90  output_mrci.f90  output_pruned_mrci.f90
graci/dep/bitci/src/ci/pruning/: prune.f90  pspace.f90  qspace.f90
graci/dep/bitci/src/ci/pt2/: enpt2.f90  gvvpt2.f90  gvvpt2_diab.f90  gvvpt2_follow.f90  gvvpt2_hamiltonian.f90  pt2_common.f90  truncate.f90
graci/dep/bitci/src/common/confs/: conftype.f90  filter_holeconfs.f90
graci/dep/bitci/src/common/csf2det/: csf2det_mrci.f90  det_print.f90
graci/dep/bitci/src/common/hashtable/: dethash.f90
graci/dep/bitci/src/common/include/: 1tdm_param.f90  bitglobal.f90  constants.f90  dftmrci_param.f90
graci/dep/bitci/src/common/io/: h5_ops.f90  iomod.f90
graci/dep/bitci/src/common/slater_condon/: slater_condon.f90
graci/dep/bitci/src/common/spin_coupling/: csf.f90  pattern_indices_k0.f90  spin_coupling.f90  spin_coupling_k0.f90
graci/dep/bitci/src/common/utils/: bitutils.f90  helper.f90  mrciutils.f90  timing.f90  utils.f90
graci/dep/bitci/src/integrals/: df.f90  exact.f90  integrals.f90
graci/dep/bitci/src/si/finalise/: finalisesi.f90
graci/dep/bitci/src/si/init/: initsi.f90
graci/dep/bitci/src/si/merge/: merge.f90
graci/dep/bitci/src/si/soc/: soc.f90  triplet_tdm_mrci.f90
graci/dep/bitci/src/si/transition_density/: 1tdm_mrci.f90  custom_damping.f90  modified_transition_density.f90  transition_density.f90
graci/dep/bitci/src/wf/dyson_interface/: dyson_interface.f90
graci/dep/bitci/src/wf/extract/: extract.f90
graci/dep/bitci/src/wf/finalise/: finalisewf.f90
graci/dep/bitci/src/wf/init/: initwf.f90
graci/dep/bitci/src/wf/overlap_interface/: overlap_interface.f90
graci/lib/bitci/: CMakeLists.txt  install_bitci
graci/lib/bitci/doc/: implementation.tex  jcp.bst  symmetry.tex
graci/lib/bitci/doc/doxygen/: configfile  mainpage.txt
graci/lib/bitci/pgo_gen/: butadiene.inp
graci/lib/bitci/src/: basedet.f90  bitglobal.f90  bitutils.f90  casdets.f90  constants.f90  dethash.f90  helper.f90  initialise.f90  iomod.f90  math.f90  mrcidets.f90  rasdets.f90  timing.f90  utils.f90
graci/lib/bitci/src/ci/conf_mrci/: confbuilder.f90  confinfo.f90  holeconfs.f90  mrciconf.f90
graci/lib/bitci/src/ci/conf_ref/: ref_prop.f90  ref_prune.f90  ref_refine.f90  refconf.f90
graci/lib/bitci/src/ci/confs/: confbuilder.f90  confinfo.f90  holeconfs.f90  mrciconf.f90  ref_prune.f90  ref_refine.f90  refconf.f90
graci/lib/bitci/src/ci/density/: 1rdm.f90  1rdm_double.f90  1rdm_mrci.f90  density.f90
graci/lib/bitci/src/ci/dets/: casdets.f90  detsort.f90  mrcidets.f90  rasdets.f90
graci/lib/bitci/src/ci/detwf/: mrci_wf.f90  truncate_dets.f90
graci/lib/bitci/src/ci/dftcis/: dftcis.f90  dftcis_conf.f90  dftcis_guess.f90  dftcis_hbuild.f90
graci/lib/bitci/src/ci/dftmrci/: dftmrci.f90  dftmrci_param.f90
graci/lib/bitci/src/confs/: confbuilder.f90  conftype.f90  holeconfs.f90  mrciconf.f90  ref_refine.f90  refconf.f90
graci/lib/bitci/src/conftype/: conftype.f90
graci/lib/bitci/src/dets/: casdets.f90  detsort.f90
graci/lib/bitci/src/dftcis/: dftcis.f90  dftcis_conf.f90  dftcis_hbuild.f90  dftcis_param.f90
graci/lib/bitci/src/dftmrci/: dftmrci_param.f90
graci/lib/bitci/src/diag_det/: sigma.f90
graci/lib/bitci/src/diag_mrci/: guessvecs.f90  mrci_diag.f90  mrci_guess.f90  ref_diag.f90
graci/lib/bitci/src/diag_ref/: ref_diag.f90
graci/lib/bitci/src/eigensolvers/: gendav.f90
graci/lib/bitci/src/filtering/: asci_trim.f90
graci/lib/bitci/src/hashtable/: dethash.f90
graci/lib/bitci/src/hbuild/: hij_disk.f90  sigma.f90
graci/lib/bitci/src/include/: bitglobal.f90  bitstrings.f90  constants.f90  setsym.f90
graci/lib/bitci/src/init/: initialise.f90  precompute_integrals.f90
graci/lib/bitci/src/integrals/: df.f90  exact.f90  integrals.f90
graci/lib/bitci/src/io/: chkpt.f90  iomod.f90
graci/lib/bitci/src/si/: initsi.f90
graci/lib/bitci/src/spin_coupling/: csf.f90  spin_coupling.f90  spincp_coeff.f90
graci/lib/bitci/src/utils/: bitutils.f90  detutils.f90  helper.f90  mrciutils.f90  utils.f90
graci/lib/integrals/: CMakeLists.txt  install_int  install_lib
graci/lib/integrals/src/: accuracy.f90  int_pyscf.f90  libint_pyscf.f90  map_module.f90  naf.f90  rrdf.f90
graci/lib/overlap/: CMakeLists.txt  install_overlap
graci/lib/overlap/src/: overlap.f90
graci/lib/overlap/src/dets/: detfuncs.f90  detsort.f90
graci/lib/overlap/src/factors/: factors.f90
graci/lib/overlap/src/include/: constants.f90  global.f90
graci/lib/overlap/src/overlap/: overlap.f90  overlap_interface.f90  wfoverlap.f90
graci/lib/overlap/src/utils/: utils.f90
(+256 files in other folders)
